2006-10-16  Tor Lillqvist  <tml@novell.com>

	Fix for #348212:

	* mail-mt.h: On Win32 we don't want to use the mail_thread_queued
	variable outside the libevolution-mail DLL, but instead access its
	value through a getter function.

	* mail-mt.c: Make mail_thread_queued static on Win32.
	(mail_win32_get_mail_thread_queued): New function that returns the
	value of mail_thread_queued.

2006-10-16  Chris Heath  <chris@heathens.co.nz>

	* mail-component.c (create_local_item_cb): Fix memory leak.
	Fixes bug #360815.

2006-10-16  Srinivasa Ragavan  <sragavan@novell.com>
	
	** Fix for bug #333864 and bug #351374 

	* em-format-html-display.c: (efhd_image_resized),
	(efhd_image_unallocate), (efhd_attachment_image): Make sure that the
	callback is removed when the puri is destroyed.

2006-09-30  Harish Krishnaswamy  <kharish@novell.com>

	* em-format-html-display.c: (em_format_html_get_search_dialog):
	Do not mark empty strings for translation. Fixes #357422.
	
2006-09-29  Daniel Gryniewicz  <dang@gentoo.org>

	* em-folder-view.c: ignore marked, empty selections when replying.
	Fixes bug #354650. (committed by Andre Klapper)

2006-09-29  Nick Sukharev  <nick@galaktika.ru>

	* mail/em-format-html.c: UUEncoded calendars will be displayed as 
	calendars, not as plain text. Fixes bug #352767.
	(committed by Andre Klapper)

2006-09-29  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #341932 Patch from Roozbeh Pournader
	
	* em-format-html.c: (efh_format_header): patch to enlarge
	the buffer for printing date.

2006-09-29  Srinivasa Ragavan  <sragavan@novell.com>

	** Fixes a lot of search issue.

	* em-folder-browser.c: (emfb_init), (em_folder_browser_show_wide),
	(vfolder_setup_desc), (emfb_search_search_activated),
	(emfb_edit_cut), (emfb_edit_select_all), (emfb_set_folder):

2006-09-28  Srinivasa Ragavan  <sragavan@novell.com>
	
	** Pushing a downstream fix in SUSE.
	
	* message-list.c: (message_list_init), (message_list_destroy),