@@ -1,3 +1,9 @@
+2006-11-20  Veerapuram Varadhan  <vvaradhan@novell.com>
+
+	* exchange-folder-permission.c
+	(org_gnome_exchange_folder_permissions): Decode folder path - in
+	case if it has any encoded characters.
+	
 2006-08-07  Sushma Rai  <rsushma@novell.com>
 
 	* org-gnome-exchange-operations.error.xml: Corrected a spelling 
